cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_144.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:88: error: DEAD_STORE
  The value written to &p (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:88:19: Write of unused value
86.           value |= ((unsigned long)(*p++ & 0x3f)) << 12;
87.           value |= (*p++ & 0x3f) << 6;
88.           value |= *p++ & 0x3f;
                        ^
89.           if (value < 0x200000)
90.               return -4;
